Update my e-mail address.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
 Kenichi Suto <deep_blue@users.sourceforge.net>
-Hironori FUJII <fujii@chi.its.hiroshima-cu.ac.jp>
+Hironori FUJII <fujii.hironori@gmail.com>
